--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
-    <string name="app_name">PhoneDoc|MDT</string>
+    <string name="app_name">PhoneDoc</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="menu_settings">Settings</string>
+    <string name="flashlight_button_description">Flash on/off</string>
+
 </resources>
